<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chipper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor set it</string>
    <string name="navdrawer_item_dashboard">Dashboard</string>
    <string name="navdrawer_item_chiptunes">Chiptunes</string>
    <string name="navdrawer_item_popular">Popular</string>
    <string name="navdrawer_item_featured">Featured</string>
    <string name="navdrawer_item_playlists">Playlists</string>
    <string name="navdrawer_item_parties">Parties</string>
    <string name="navdrawer_item_offline">Offline mode</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_feedback">Send feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_playlist_dialog_item">Add playlist</string>

    <string name="error_network">A network error has occured, please check your connection.</string>
    <string name="error_no_response">There was no response from the server.</string>
    <string name="error_network_http_error">There was an issue in communicating with the server.</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_upvote">Upvote</string>
    <string name="action_downvote">Downvote</string>
    <string name="default_current_tune_title">Press play</string>
    <string name="default_current_tune_description">to play a random tune</string>
    <string name="action_offline">Offline</string>
    <string name="action_share">Share</string>
    <string name="app_name_tv">Chipper for TV</string>
    <string name="service_name">ChipperPlaybackService</string>

    <string name="empty_msg_chiptunes">There are no\nchiptunes to display</string>
    <string name="empty_msg_playlist_viewer">You don\'t have any\nchiptunes in this playlist.</string>
    <string name="empty_msg_featured">The featured playlist\nhas not been loaded\nyet.</string>

    <string name="setting_auto_upvote">Auto Upvote</string>
    <string name="setting_auto_upvote_summary">Automatically upvote when you favorite a chiptune</string>
    <string name="setting_auto_skip">Auto Skip</string>
    <string name="setting_auto_skip_summary">Skip to the next song when you downvote</string>
    <string name="setting_show_only_voted">Only show voted chiptunes</string>
    <string name="setting_show_only_voted_summary">Only show voted chiptunes in \'Popular\'</string>
    <string name="setting_auto_scroll">Auto scrolling</string>
    <string name="setting_auto_scroll_summary">Automatically scroll the list to the current playing chiptune</string>
    <string name="setting_category_style">Style</string>
    <string name="setting_theme_picker_dialog_title">Choose a theme</string>
    <string name="setting_category_offline">Offline</string>
    <string name="setting_offline_size">Offline size on disk</string>
    <string name="setting_category_general">General</string>
    <string name="setting_offline_wifi_only">Download via Wi-Fi only</string>
    <string name="setting_offline_wifi_only_summary">To reduce carrier data charges, don\'t download over mobile networks</string>
    <string name="setting_clear_offline_cache">Clear offline data</string>
    <string name="setting_clear_offline_cache_summary">Clear downloaded chiptunes</string>
    <string name="setting_clear_cache">Clear Cache</string>
    <string name="setting_clear_cache_summary">Clear cached chiptunes</string>
    <string name="setting_category_cache">Cache</string>
    <string name="setting_cache_size">Cache size on disk</string>
    <string name="setting_cache_playback">Cache during playback</string>
    <string name="setting_cache_playback_summary">Temporarily store music while streaming</string>
    <string name="settings">Settings</string>
    <string name="settings_downloading">Downloading</string>
    <string name="settings_general">General settings</string>
    <string name="settings_about">About</string>
    <string name="action_submit_feature">Submit as Feature</string>
    <string name="action_submit_feature_condensed">Feature this</string>
    <string name="dialog_submit_feature_title">Enter a feature title</string>
    <string name="dialog_submit_feature_msg">Choose a display title for this feature playlist.</string>
    <string name="dialog_button_submit">Submit</string>
    <string name="dashboard_recents_header_title">Recently played</string>
    <string name="dashboard_mostplayed_header_title">Most played</string>
    <string name="dashboard_recents_empty_msg">No recents available</string>
    <string name="setting_category_dashboard">Dashboard</string>
    <string name="setting_num_recents">Number of displayed recents</string>
    <string name="setting_num_mostplayed">Number of most frequently played</string>
    <string name="action_favorite">Favorite</string>
    <string name="dashboard_mostplayed_server_header_title">Globally most played</string>
    <string name="dashboard_mostplayed_empty_msg">No chiptunes available</string>
    <string name="dashboard_mostcompleted_server_header_title">Globally most completed</string>
    <string name="settings_account">Account</string>
    <string name="setting_acct_push_notification">Push notifications</string>
    <string name="setting_acct_push_notification_summary">Enable all push notifications on this device</string>
    <string name="setting_category_notifications">Notifications</string>
    <string name="setting_acct_notif_feature">Feature notification</string>
    <string name="setting_acct_notif_feature_summary">Enable notifications for new Featured playlists</string>
    <string name="setting_acct_notif_redeem">Share redemption notification</string>
    <string name="setting_acct_notif_redeem_summary">Enable notifications for when your shared playlists are redeemed.</string>

</resources>
